--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,22 +1,32 @@
-html {
-  font-size: 14px;
+.title-container {
+  width: 540px;
+  margin: auto;
+  text-align: center;
 }
 
-@media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
+.input-container {
+  display: flex;
+  flex-direction: column;
+  width: 540px;
+  margin: auto;
 }
 
-.btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
-  box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
+.input-group-text {
+  width: 150px;
 }
 
-html {
-  position: relative;
-  min-height: 100%;
+.btn-container {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 540px;
+  margin: auto;
 }
 
-body {
-  margin-bottom: 60px;
+.btn-item {
+  width: 75px;
+}
+
+.btn-primary {
+  width: 100%;
 }
