Added Controller Actions

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -23,16 +23,16 @@
         </div>
         <div class="btn-container">
             <div class="btn-item">
-                <button type="submit" name="operation" value="add" class="btn btn-primary">+</button>
+                <button type="submit" name="mathOp" value="add" class="btn btn-primary">+</button>
             </div>
             <div class="btn-item">
-                <button type="submit" name="operation" value="subtract" class="btn btn-primary">-</button>
+                <button type="submit" name="mathOp" value="subtract" class="btn btn-primary">-</button>
             </div>
             <div class="btn-item">
-                <button type="submit" name="operation" value="multiply" class="btn btn-primary">*</button>
+                <button type="submit" name="mathOp" value="multiply" class="btn btn-primary">*</button>
             </div>
             <div class="btn-item">
-                <button type="submit" name="operation" value="divide" class="btn btn-primary">/</button>
+                <button type="submit" name="mathOp" value="divide" class="btn btn-primary">/</button>
             </div>
         </div>
     </form>
